refactor-updated website

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     Hi!! I am Ritish.
+    I study at NIT Raipur.
+    I did my internship at Assurant Global in Georgia,USA.
 </body>
 </html>
