update- new info

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     Hi!! I am Ritish.
     I study at NIT Raipur.
     I did my internship at Assurant Global in Georgia,USA.
+    I have a FTE from ZS Associates.
 </body>
 </html>
